--- a/OnlineStore/package.json
+++ b/OnlineStore/package.json
@@ -3,24 +3,24 @@
   "name": "asp.net",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.2.1",
-    "jquery": "3.3.1",
-    "jquery-validation": "1.19.0",
-    "jquery-validation-unobtrusive": "3.2.11",
-    "font-awesome": "4.7.0",
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/forms": "^7.2.5",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bootstrap": "4.2.1",
     "core-js": "^2.5.4",
+    "font-awesome": "4.7.0",
+    "jquery": "3.3.1",
+    "jquery-validation": "1.19.0",
+    "jquery-validation-unobtrusive": "3.2.11",
+    "lodash": "4.17.11",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "lodash": "4.17.11"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
